# mojefinance-service/product-service/src/main/java/cvut/fel/sit/mojefinance/product/domain/dto/AssetsAndLiabilitiesResponse.java
@@ -1,18 +1,16 @@
 package cvut.fel.sit.mojefinance.product.domain.dto;
 
-import cvut.fel.sit.mojefinance.product.domain.entity.GroupedProducts;
+import cvut.fel.sit.mojefinance.product.domain.entity.AssetLiability;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
-
-import java.util.List;
 
 @Data
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
 public class AssetsAndLiabilitiesResponse {
-    private List<GroupedProducts> assets;
-    private List<GroupedProducts> liabilities;
+    private AssetLiability assets;
+    private AssetLiability liabilities;
 }
