# mojefinance-service/product-service/src/main/java/cvut/fel/sit/mojefinance/product/domain/service/TransactionService.java
@@ -5,4 +5,6 @@ import cvut.fel.sit.mojefinance.product.domain.dto.TransactionsDomainResponse;
 
 public interface TransactionService {
     TransactionsDomainResponse getTransactions(TransactionsRequest request);
+
+    TransactionsDomainResponse getCashFlowSummary();
 }
